# myPlayer

./: .gitignore  CMakeLists.txt  README.md
include/: audio.h  packetqueue.h  player.h  video.h
src/: audio.cpp  main.cpp  packetqueue.cpp  player.cpp  video.cpp
